--- a/src/fleet_interfaces/CMakeLists.txt
+++ b/src/fleet_interfaces/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/FleetCommand.msg"
+  "srv/ConfigureRobot.srv"
   DEPENDENCIES std_msgs
 )
 
